src/objects/Lead_Raw_Data__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <label>Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Individual_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Raw Data</relationshipLabel>
        <relationshipName>Lead_Raw_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Status__c</fullName>
        <label>Matched Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Partial Match</fullName>
                </value>
                <value>
                    <fullName>Perfect Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Policy Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Raw Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Matched_Status__c</columns>
        <columns>Individual_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LRD-{0000}</displayFormat>
        <label>Lead Raw Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Raw Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>